atualização do projeto usando grid layout

--- a/index.html
+++ b/index.html
@@ -27,28 +27,54 @@
     <main>
         <section>
             <div class="banner">
-                
+                <img class="banner_img" src="./img/bannerBack.jpg" alt="Imagem de um mapa mundo">
+                <div class="banner_popup"><h3>Por que nos temos as melhores opções de viajens para você? Venha conhecer os nossos destinos e vantagens</h3></div>
+            </div>
+
                 <div class="container_cards">
                     <h2 class="section_title">Destinos em destaque</h2>
 
-                    <div class="destino_grid">
+                    <div class="destinos_grid">
 
-                        <div class="destino_card">
-
-                            <img class="destino_img"
+                        <div class="destinos_card">
+                            <img class="destinos_img"
                                 src="https://cdn.abacus.ai/images/b6b90d0a-91e3-47ed-93fc-23a8b646d269.png"
                                 alt="Foto de Paris">
                             <div class="destino_info">
                                 <h3>Paris</h3>
                                 <p>A cidade do amor e da luz. Torre Eiffel, Louvre e muito
                                     charme francês.</p>
-                                <a href="#">Saiba mais</a>
+                                <p>A partir de R$ 3500</p>
+                                <a href="https://booking.com">Saiba mais</a>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-            </div>
+                            <div class="destinos_card">
+                                <img class="destinos_img"
+                                    src="https://cdn.abacus.ai/images/b6b90d0a-91e3-47ed-93fc-23a8b646d269.png"
+                                    alt="Foto de Paris">
+                                <div class="destino_info">
+                                    <h3>Paris</h3>
+                                    <p>A cidade do amor e da luz. Torre Eiffel, Louvre e muito
+                                        charme francês.</p>
+                                    <p>A partir de R$ 3500</p>
+                                    <a href="https://booking.com">Saiba mais</a>
+                                </div>
+                            </div>
+
+                            <div class="destinos_card">
+                                <img class="destinos_img"
+                                    src="https://cdn.abacus.ai/images/b6b90d0a-91e3-47ed-93fc-23a8b646d269.png"
+                                    alt="Foto de Paris">
+                                <div class="destino_info">
+                                    <h3>Paris</h3>
+                                    <p>A cidade do amor e da luz. Torre Eiffel, Louvre e muito
+                                        charme francês.</p>
+                                    <p>A partir de R$ 3500</p>
+                                    <a href="https://booking.com">Saiba mais</a>
+                                </div>
+                             </div>
+                    </div>
         </section>
     </main>
 
